@@ -22,6 +22,7 @@ AC_CONFIG_LINKS([sysroot/include/hurd/stddef.h:hurd/stddef.h
 		 sysroot/include/hurd/thread.h:hurd/thread.h
 		 sysroot/include/hurd/activity.h:hurd/activity.h
 		 sysroot/include/hurd/lock.h:hurd/lock.h
+		 sysroot/include/hurd/trace.h:hurd/trace.h
 		 sysroot/include/hurd/mutex.h:hurd/mutex.h
 		 sysroot/include/hurd/rmutex.h:hurd/rmutex.h
 		 sysroot/include/hurd/futex.h:hurd/futex.h
